Compresor de Texto

--- a/Proyecto_EDD/src/proyecto_edd/Principal.form
+++ b/Proyecto_EDD/src/proyecto_edd/Principal.form
@@ -124,6 +124,11 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="compresor_textoActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Expresion Matematicas"/>
+              </Properties>
+            </MenuItem>
           </SubComponents>
         </Menu>
       </SubComponents>
